Lilipat ya king [[Template:Country data India]]

--- a/Template:Country_data_IND.mw
+++ b/Template:Country_data_IND.mw
@@ -1,70 +1,1 @@
-{{ {{{1<noinclude>|country showdata</noinclude>}}}
-| alias = India
-| flag alias = Flag of India.svg
-| flag alias-British = British Raj Red Ensign.svg
-| flag alias-1931 = 1931 Flag of India.svg
-| flag alias-army = Flag of Indian Army.png
-| link alias-army = Indian Army
-| flag alias-naval = Naval Ensign of India.svg
-| flag alias-naval-1879 = Flag of Imperial India.svg
-| flag alias-naval-1928 = Naval Ensign of the United Kingdom.svg
-| link alias-naval = Indian Navy
-| flag alias-air force = Ensign of the Indian Air Force.svg
-| link alias-air force = Indian Air Force
-| size = {{{size|}}}
-| name = {{{name|}}}
-| altlink = {{{altlink|}}}
-| variant = {{{variant|}}}
-<noinclude>
-| var1 = British
-| var2 = 1931
-| var3 = naval-1879
-| var4 = naval-1928
-| redir1 = IND
-</noinclude>
-}}<noinclude>
-[[af:Sjabloon:Landdata Indië]]
-[[ar:قالب:معطيات الهند]]
-[[arz:قالب:Country data India]]
-[[bcl:Plantilya:Country data Indya]]
-[[bg:Шаблон:Данни страна Индия]]
-[[bn:টেমপ্লেট:Country data ভারত]]
-[[ca:Plantilla:Country data Índia]]
-[[da:Skabelon:Lande data Indien]]
-[[en:Template:Country data India]]
-[[es:Plantilla:Geodatos India]]
-[[eu:Txantiloi:Herrialde info India]]
-[[fa:الگو:Country data India]]
-[[fr:Modèle:Country data Inde]]
-[[hu:Sablon:Country data India]]
-[[id:Templat:Country data India]]
-[[is:Snið:Country data Indland]]
-[[ja:Template:Country data India]]
-[[jv:Cithakan:Country data India]]
-[[ka:თარგი:ქვეყნის მონაცემები ინდოეთი]]
-[[kk:Үлгі:Country data Үндістан]]
-[[km:ទំព័រគំរូ:ទិន្នន័យ នៃប្រទេសឥណ្ឌា]]
-[[kn:ಟೆಂಪ್ಲೇಟು:Country data IND]]
-[[mk:Шаблон:Country data Индија]]
-[[mt:Mudell:Dati pajjiż Indja]]
-[[mzn:شابلون:Country data India]]
-[[ne:ढाँचा:Country data भारत]]
-[[new:Template:Country data India]]
-[[nn:Mal:Landdata India]]
-[[or:ଛାଞ୍ଚ:Country data India]]
-[[pt:Predefinição:Country data India]]
-[[ro:Format:Country data India]]
-[[sah:Халыып:Country data India]]
-[[sh:Šablon:Country data Indija]]
-[[simple:Template:Country data India]]
-[[sl:Predloga:Podatki države Indija]]
-[[sr:Шаблон:Подаци о застави Индија]]
-[[sv:Mall:Landsdata Indien]]
-[[ta:வார்ப்புரு:நாட்டுத் தகவல் இந்தியா]]
-[[tl:Suleras:Country data India]]
-[[tr:Şablon:Ülke veri Hindistan]]
-[[vi:Bản mẫu:Country data Ấn Độ]]
-[[war:Batakan:Country data India]]
-[[yo:Àdàkọ:Country data India]]
-[[zh:Template:Country data India]]
-</noinclude>
+#REDIRECT [[Template:Country data India]]
