*Empty MediaWiki Message*

--- a/Amanung_Yami.mw
+++ b/Amanung_Yami.mw
@@ -3,4 +3,4 @@ Ing '''Amanung Yami''' o '''Tao''' (''Cizingcizing/Ciringciring No Tao'') metung
 {{Suli}}
 
 [[Category:Deng amanung Awstronesyu]]
-[[Category:Deng amanung Pormosyanu]]
+[[Category:Deng amanung Malayopolinesyu]]
