--- a/Amanung_Yami.mw
+++ b/Amanung_Yami.mw
@@ -1,3 +1,4 @@
+{{Incubator|code= tao}}
 Ing '''Amanung Yami''' o '''Tao''' (''Cizingcizing/Ciringciring No Tao'') metung ya kareng pamyalita king [[Taiwan]].
 
 {{Suli}}
