--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -25,7 +25,11 @@ Ing Pangunahing layunin ning KKPK para apisanmetung nala ding Kapampangan, mamye
 
 ==Layunin==
 
-*Para asopan la ding Kapampangan.<ref>[http://www.sunstar.com.ph/pampanga/local-news/2015/06/29/facebook-group-hosts-training-program-floridablanca-folk-416083 The Kapampangan Ku, Pagmaragul Ku (KKPK), an organization of Kapampangan on Facebook, hosted a housekeeping training program for dozens of participants here in bid to give employment skills to people in need of jobs.] '''Published in the Sun.Star Pampanga newspaper on June 30, 2015.''' By
+*Para asopan la ding Kapampangan.<ref>[http://www.sunstar.com.ph/pampanga/local-news/2015/09/19/kapampangan-facebook-group-host-anniversary-mission-431189 Kapampangan Facebook group to host anniversary mission]
+By IAN OCAMPO FLORA
+
+'''Published in the Sun.Star Pampanga newspaper''' 
+</ref><ref>[http://www.sunstar.com.ph/pampanga/local-news/2015/06/29/facebook-group-hosts-training-program-floridablanca-folk-416083 The Kapampangan Ku, Pagmaragul Ku (KKPK), an organization of Kapampangan on Facebook, hosted a housekeeping training program for dozens of participants here in bid to give employment skills to people in need of jobs.] '''Published in the Sun.Star Pampanga newspaper on June 30, 2015.''' By
 
 By IAN OCAMPO FLORA
 </ref>
