--- a/Renato_Alzadón.mw
+++ b/Renato_Alzadón.mw
@@ -1,17 +1,17 @@
 Pepasala king Sulu ning Malagung Panyulat Kapampangan , 
 
 == Talambie ==
-Linto ne ing metung karing taung malambat danang panayan ring alagad ning lakaran king panyulung ning kalinangan Kapampangan, ini ya i Renato B. Alzadon, anak neng Florentina Bonus at ning meging Consejal king [[Capas, Tarlac]], Pedro Alzadon. Tubu Arengoreng, [[Capas, Tarlac]], I Renato agyan mang malambat neng manuknangan king Baltimore, Maryland, king Bansang Amerika, ali na kelinguan ing pigmulan nang kalinangan at sisuan a Amanu. Anak ya pa i Renato mamikudta neng miyayaluang aske ning Literatura karing amanung Kapampangan, Inglis, Kastila, ampon Tagalug.
+Linto ne ing metung karing taung malambat danang panayan ring alagad ning lakaran king panyulung ning kalinangan Kapampangan, ini ya i Renato B. Alzadon, anak neng Florentina Bonus ate5u75e ning meging Consejal king [[Capas, Tarlac]], Pedro Alzadon. Tubu Arengoreng, [[Capas, Tarlac]], I Renato agyan mang malambat neng manuknangan king Baltimore, Maryland, king Bansang Amerika, ali na kelinguan ing pigmulan nang kalinangan at sisuan a Amanu. Anak ya pa i Renato mamikudta neng miyayaluang aske ning Literatura karing amanung Kaespampangan, Inglis, Kastila, ampon Tagalug.
 
-Pablasang itang kayang Igpa a kakalugran nang matalik ning meging pamuntuk balen ning Capas ing meanguabie Francisco Tanglao at itang kanakung meanguabie Tata, meging Hukum Dionisio P. Tanglao, metung yang matenakan watas ning Kapampangan, anya i Renato megi yang o migit ya pa keraklan ketang kayang Tata king geling~an king pamanyulat at pamikudta.
+Pablasang itang kayang Igpa a kakalugran nang matalik ning meging pamuntuk balen ning Capas ing meanguabie Francisco Tanglao at itang kanakung meanguabie Tata, meging Hukum Dionisio P. Tan5ustelao, metung yang matenakan watas ning Kapampangan, anya i Renato megi yang o migit ya pa keraklan ketang kaya7trtfc ru5d5 ng Tata king geling~an king pamanyulat at pamik7y4udta.
 
-Ing Literatura marakal ya sakup a marangle, kawatasan, dulaan, nobela, kwentu, dalit, at alwa pa. Sanu man kareni at karing alwa ra pang dake, kalupa ning pamanyulat pan-religion o king Banal a Kasulatan, i Renato aguio nalang palambutan pusu ring mangasias a diktador pati na ring pusakal, karing kayang susulat.
+Ing Literatura marakal ya sakup a marangle, kawatasan, dulaan, nobela, kwentu, dalit, at alwa pa. Sanu man kareni at karing alwa ra pang dake, kalupa ning pamanyulat pan-religion o king Banal a y5Kasulatan, i Renato aguio nalang palambutan pusu ring mangasias a diktador pati na ring pusakal, karing kayang susulat.
 
-Pepaganaka at binyayan nalang pasibayung Renato B. Alzadon ring dramang Kapampangan parandam da kanita karing radyu king Region ning [[Pampanga]]. Ing suwala nang pang-radyu at pang-Crissotan, atyu pa kaya at malyaring lang magduyan ring darandam kabang pagtumayla nala karing kawatasan nang Pangkasalesayan ning Yatu o ning Balen a kaluguran, kalupa ning gewa na king DZAB king Angeles ketang kayanakan napa.
+Pepaganaka at binyayan nalang pasibayung Rena45eto B. Alzadonu ring dramang Kapampangan parandam da kanita karing radyu king Region ning [[Pampanga]]. Ing suwala nang pang-radyu at pang-Crissotan, atyu pa kaya at malyaring lang magduyan ring darandam kabang pagtumayla nala karing kawatasan nang Pangkasalesayan ning Yatu o ning Balen a kaluguran, kalupa ning gewa na king DZAf5stu7cng Angeles ketang kayanakan napa.
 
-Nung ing Pintor at Watas [[Rafael Maniago]], Jose Marti ya datang, i [[Tony M. Peña]], kasing-pinu yang Amado M. Yuzon o ning kayang inpun [[Monico Mercado]], ining Renato B. Alzadon eka mag-aduang isip ilimpi ya kang [[Rizal]]. King marangle ning pamananam, marangle ning kabayanijan pamilaban, balu na ngan, at kalupa na namang Rizal, agyang aduang pulung tumpuk kabang kawatasan ena urungan isulat. Ketang anak ya king Pampangan, pituki-tuki re ring pakamalan ring aduang Poetang Laureadu [[Jose M Gallardo]] at [[Vedasto Ocampo]], ila rin kayang anting "idolo" liban king kayang Tatang. Ring watas areni ela bisu-bisung papakit karing eganagana rang gawa, pauli ning balu re katindi anting "tape recorder" ing kayang memoria. Balu re ring mesambitlang matenakan watas itang kasebyan a - "maralas ing tiru, migit ya pa king mituru."
+Nung ing Pintor at Watas [[Rafael Maniago|Rate4fael Maniago]], Jose Marti ya datang, i [[Tony M. Peña]], kasing-pinu yang Amado M. Yuzon o ning kayang inpun [[Monico Mercado]], ining Renato B. Alzadon eka mag-aduang isip ilimpi ya kang [[Rizal]]. King marangle ning pamana5rdtnam, marangle ning kabayanijan pamilaban, balu na ngan, at kalupa na namang Rizal, agyang aduang pulung tumpuk kabang kawatasan ena ur4yytungan isulat. Ketang anak ya king Pampangan, pituki-tuki re ring pakamalan ring aduang Poetang Laureadu [[Jose M Gallardo]] at [[Vedasto Ocampo]], ila rin kayang anting "idolo" liban king kayang Tatang. Ring wata4res areni ela bisu-bisung papakit karing eganagana rang gawa, pauli ning balu re katindi anting "tape recorder" ing kayang memoria. Balu re ring 6ujrmesambitlang matenakan watas itang kasebyan a - "maralas ing tiru, migit ya pa king mituru."
 
-Dakal lang metula at mangabiasa karing susulat at tuturu nang Renato ngeni king dalan ning aptas, pauli nini pasalamat la at akilala ne i [[Ernesto C. Turla]], metung pang talagabe, manimuna at masipag nang pastul ning Kalinangan. King kayang pamanintun kasulatan king Amanung Sisuan disan ne i Ginung Turla king aptas, anya milage yang pasibayu at payaslagan ne ing Literatura at Sining Kapampangan. Salamat karing miglalang karing makinang panyulat ampo king pangatalakad ning aptas, pauli ra ing pamisanmetung at panyulung ring diwang pankapayapan ding alagad ning Kalinangan masala lang lalung mipaltutu. -Aida Tanglao-Aguas, 29 ya ing Oktubri, 2005
+Dakal lang metula at mangabiasa karing susulat at tuturu nang Renato ngeni king dalan ning aptas, pauli nini pasalamat la at akilala ne i [[Ernesto C. Turla]], metung pang talagabe, manimuna at masipag nang pastul ning Kalinangan. King kayang pamanintun kasulatan king Amanung Sisuan disan ne i Ginung Turla king aptas, anya milage yang pasibayu at payaslagan n5ey7ufjilo6thji8e ing Literatura at Sining Kapampangan. Salamat karing miglalang karing makinang panyulat ampo king pangatalakad ning aptas, pauli ra ing pamisanmetung at panyulung ring diwang pankapayapan ding alagad ning Kalinangan masala lang lalung mipaltutu. -Aida Tanglao-Aguas, 29 ya ing Oktubri, 2005
 
 ===Ding kayang Kinudta===
 *[[Anak-Pawas]]
