Iurung ya ing miyalilan 266759 nang [[Special:Contributions/78.145.34.234|78.145.34.234]] ([[User talk:78.145.34.234|Talk]])

--- a/Republika_ning_Tsina.mw
+++ b/Republika_ning_Tsina.mw
@@ -5,7 +5,7 @@
 |image_flag =Flag of the Republic of China.svg 
 |image_coat =Republic of China National Emblem.svg
 |symbol_type =National Emblem
-|image_map =Taiwan in China (+all claims hatched).svg
+|image_map =LocationROC.png 
 |national_motto =None 
 |national_anthem =''[[National Anthem of the Republic of China|National Anthem of the ROC]]'' 
 |official_languages =[[Standard Mandarin|Mandarin]] (Guoyü) 
