/* Deng Sanga (Chapters)/Sub-Groups */

--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -42,7 +42,7 @@ Ing Founder apin I [https://commons.wikimedia.org/wiki/File:Jetlee_Yusi_Tiongco.
 
 ==Deng Sanga (Chapters)/Sub-Groups==
 *KKPK Team Apamama ([[Apalit]], [[Macabebe, Pampanga|Macabebe]], [[Masantol,_Pampanga|Masantol]] & [[San Simon, Pampanga|San Simon]])
-*KKPK Team Centro ([[San_Fernando,_Pampanga|City of San Fernando]], [[Mexico]], [[Arayat, Pampanga|Arayat]], [[Minalin, Pampanga|Minalin]], [[Bacolor, Pampanga|Bacolor]], & [[Santo_Tomas,_Pampanga|Santo Tomas]])
+*KKPK Team Centro ([[San_Fernando,_Pampanga|City of San Fernando]], [[Mexico]], [[Candaba, Pampanga|Candaba]], [[Arayat, Pampanga|Arayat]], [[Minalin, Pampanga|Minalin]], [[Bacolor, Pampanga|Bacolor]], & [[Santo_Tomas,_Pampanga|Santo Tomas]])
 *KKPK Team [[Floridablanca, Pampanga|Floridablanca]]
 *KKPK Team [[Lubao, Pampanga|Lubao]]
 *KKPK Team SPG ([[Santa_Rita,_Pampanga|Sta Rita]], [[Porac,_Pampanga|Porac]] & [[Guagua,_Pampanga|Guagua]])
