*Empty MediaWiki Message*

--- a/Renato_Alzadón.mw
+++ b/Renato_Alzadón.mw
@@ -1,9 +1,9 @@
 Pepasala king Sulu ning Malagung Panyulat Kapampangan , 
 
 == Talambie ==
-Linto ne ing metung karing taung malambat danang panayan ring alagad ning lakaran king panyulung ning kalinangan Kapampangan, ini ya i Renato B. Alzadon, anak neng Florentina Bonus at ning meging Consejal king [[Capas, Tarlac]], Pedro Alzadon. Tubu Arengoreng, [[Capas, Tarlac]], I Renato agyan mang malambat neng manuknangan king Baltimore, Maryland, king Bansang Amerika, ali na kelinguan ing pigmulan nang kalinangan at sisuan a Amanu. Anak ya pa i Renato mamikudta neng miyayaluang aske ning Literatura karing amanung Kapampangan, Inglis, Kastila, ampon Tagalug.
+Linto ne ing metung karing taung malambat danang panayan ring alagad ning lakaran king panyulung ning kalinangan Kapampangan, ini ya i Renato B. Alzadon, anak neng Florentina Bonus at ning meging Consejal king [[Capas, Tarlac]], Pedro Alzadon. Tubu Aranguren, [[Capas, Tarlac]], I Renato agyan mang malambat neng manuknangan king Baltimore, Maryland, king Bansang Amerika, ali na kelinguan ing pigmulan nang kalinangan at sisuan a Amanu. Anak ya pa i Renato mamikudta neng miyayaluang aske ning Literatura karing amanung Kapampangan, Inglis, Kastila, ampon Tagalug.
 
-Pablasang itang kayang Igpa a kakalugran nang matalik ning meging pamuntuk balen ning Capas ing meanguabie Francisco Tanglao at itang kanakung meanguabie Tata, meging Hukum Dionisio P. Tanglao, metung yang matenakan watas ning Kapampangan, anya i Renato megi yang o migit ya pa keraklan ketang kayang Tata king geling~an king pamanyulat at pamikudta.
+Pablasang itang kayang Igpa a kakaluguran nang matalik ning meging pamuntuk balen ning Capas ing meanguabie Francisco Tanglao at itang kanakung meanguabie Tata, meging Hukum Dionisio P. Tanglao, metung yang matenakan watas ning Kapampangan, anya i Renato megi yang o migit ya pa keraklan ketang kayang Tata king geling~an king pamanyulat at pamikudta.
 
 Ing Literatura marakal ya sakup a marangle, kawatasan, dulaan, nobela, kwentu, dalit, at alwa pa. Sanu man kareni at karing alwa ra pang dake, kalupa ning pamanyulat pan-religion o king Banal a Kasulatan, i Renato aguio nalang palambutan pusu ring mangasias a diktador pati na ring pusakal, karing kayang susulat.
 
