--- a/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
+++ b/Kapampangan_Ku_Pagmaragul_Ku_(KKPK)_International_Inc..mw
@@ -34,7 +34,7 @@ By IAN OCAMPO FLORA
 By IAN OCAMPO FLORA
 </ref>
 *Para pagmaragul ing Lahing Kapampangan.
-*Para igiit ing pamisanmetung lalu na careng isyu patungkul careng Kapampangan.<ref>[http://www.sunstar.com.ph/pampanga/local-news/2015/05/17/kapampangan-group-holds-6th-mission-childrens-home-407951 Kapampangan group holds 6th mission in children's home]. Sunday, May 17, 2015 Sunstar Pampanga By:Ian Ocampo Flora</ref>
+*Para igiit ing pamisanmetung lalu na careng isyu patungkul careng Kapampangan<ref>[https://www.youtube.com/watch?list=PLgyY1WylJUmgDuK2HJ7FunPAWchTo1A-n&v=qFQlS4bKvb4 Maranun Pamasku ning KKPK] Video Creit TV Patrol Pampanga</ref>.<ref>[http://www.sunstar.com.ph/pampanga/local-news/2015/05/17/kapampangan-group-holds-6th-mission-childrens-home-407951 Kapampangan group holds 6th mission in children's home]. Sunday, May 17, 2015 Sunstar Pampanga By:Ian Ocampo Flora</ref>
 
 == Deng Mamuntukan==
 
