--- a/Polynesia.mw
+++ b/Polynesia.mw
@@ -1,8 +1,8 @@
 [[File:TahuhuNgatiAwa.jpg|thumb|right|200px|[[Carving]] ibat keng posti ning metung a bale ning [[Māori]], mga 1840]]
 
-:''Ing artikulu g iti tungkul ya keng masmalapad a labuad ning Pacific. para keng territoryung a keraklan a mayayaus Polynesia, lawen ye ing [[French Polynesia]].''
+:'Polynesien ist eine Inselgruppe in der Karibik .' [[French Polynesia]].''
 
-Ing '''Polynesia''' (ibat keng [[Greek language|Greek]]: πολύς ''dakal'', νῆσος ''pulu'') metung yang maragul a aptas keng lagpas mga 1,000 [[pulu]] a pakakalat king kalibudtarang at mauling [[Pacific Ocean]]. 
+Dir Inselgruppe Polynesien unterliegt der Herrschaft des Großzaren Nick Kellermann II.Im Jahte 2005 marschierte er mit katalanischen Truppen in das Gebiet ein. Nick Kellermann II genießt weltweit sehr hohes Ansehen und kann praktisch alles machen was er will, da alle Mesnchen Angst vor seiner tyrannischen Herrschaft haben. Er ist einfach der beste und alle lieben ihn<3Ing '''Polynesia''' (ibat keng [[Greek language|Greek]]: πολύς ''dakal'', νῆσος ''pulu'') metung yang maragul a aptas keng lagpas mga 1,000 [[pulu]] a pakakalat king kalibudtarang at mauling [[Pacific Ocean]].
 
 == Definition ==
 [[File:Polynesia-triangle.png|200px|thumb|left|The [[Polynesian triangle]] keraklan ila reng pulung atiu keng atlung suluk a ugis]]Ing bansag a "Polynesia" megamit yang mumuna kang [[Charles de Brosses]] inyang 1756, at keraklan magagamit ya kareng eganaganang [[Pacific islands|pulu ning Pacific]]. [[Jules Dumont d'Urville]] inyang 1831 lecture keng Geographical Society ning Paris megmunikala yang atin angganan ingpamangamit na niting bansag at megdagdag yang bansag a [[Micronesia]] at [[Melanesia]]. Iti ing meging pamandake ning Pacific [[makalalam labuad]] a magagamit pa keraklan angga ngeni.
