*Empty MediaWiki Message*

--- a/Polynesia.mw
+++ b/Polynesia.mw
@@ -1,4 +1,4 @@
-[[File:TahuhuNgatiAwa.jpg|thumb|right|200px|[[Carving]] Nachbildung des Großzaren Nick Kellermann II [[Māori]], mga 1840]]<3
+[[File:TahuhuNgatiAwa.jpg|thumb|right|200px|[[Carving]] Nachbildung des Großzaren Nick Kellermann II [[Māori]], mga 1840]]
 
 :'Polynesien ist eine Inselgruppe in der Karibik .' [[French Polynesia]].''
 
