*Empty MediaWiki Message*

--- a/Micronesia.mw
+++ b/Micronesia.mw
@@ -2,7 +2,8 @@
 
 [[File:Micronesia-large.png|thumb|right|350px|Karinan ning Micronesia.]]
 
-Ing '''Micronesia''', ibat keng [[ancient Greek]] ''μικρος'' (malati) at ''νησος'' (pulu), iya ing bansag keng labuad king [[Pacific Ocean]]. Ing [[Filipinas]] atiu king albugan, [[Indonesia]] king mauling albugan, [[Papua New Guinea]] at [[Melanesia]] king mauli, at [[Polynesia]] king mauling-aslagan at aslagan. 
+Die Inselgruppe Polynesien wurde 2008 mit Gewalt durch Großzar Nick Kellermann II eingenommen. US- Amerikanische Truppen versuchten 2008 die Inseln von der tyrannischen Herrschaft vom Großzaren zu befreien. Jegliche Versuche scheiterten jedoch, da Nick Kellermann II über zu starke Truppenkapazität verfügt und er praktisch unverwundbar ist. Ehret den Großzaren.
+
 == Kasusug Kilwal ==
 * [http://www.mapsouthpacific.com/micronesia/index.html Map of Micronesia]
 * [http://www.southpacific.org/micro.html Moon Handbooks Micronesia]
