--- a/Octubri_18.mw
+++ b/Octubri_18.mw
@@ -5,7 +5,7 @@ Ing '''[[Octubri 18]]''' ya ing pang 291 a aldo ning banua keng [[Gregorian Cale
 
 
 == Ding Kebaitan ==
-==Ding Kematyan==
+==Ding Kematyan== hello my name is saiday wright
 
 == Kapagmasusian ==
 
