*Empty MediaWiki Message*

--- a/Pun_Bulung.mw
+++ b/Pun_Bulung.mw
@@ -23,7 +23,7 @@ __NOTOC__
 *'''[[Portal:Tala da reng Portal|Deng eganaganang&nbsp;portals]]'''
 |}<!-- End Portals -->
 
-[[:tl:Wikipedia:Patungkol|Patungkul]] • [[:tl:Wikipedia:Konsultasyon|Mangutáng]] • [[:tl:Wikipedia:Paano magismula ng bagong artikulo|Pamaglalang]] • [[:tl:Wikipedia:Paano baguhin ang isang pahina|Alilan]]  • [[:tl:Wikipedia:Tulong|Saup]] • [[:tl:Wikipedia:Makipag-ugnayan sa amin|Makipag-ugnayan]] • [[Wikipedia:Embahada|Embahada]] • ''[[Wikipedia:Guestbook and Help for Non-Kapampangan Speakers|Guestbook and Help for Non-Kapampangan Speakers]]''
+[[:tl:Wikipedia:Patungkol|Patungkul]] • [[:tl:Wikipedia:Konsultasyon|Mangutáng]] • [[:tl:Wikipedia:Paano magismula ng bagong artikulo|Pamaglalang]] • [[:tl:Wikipedia:Paano baguhin ang isang pahina|Alilan]]  • [[:tl:Wikipedia:Tulong|Saup]] • [[:tl:Wikipedia:Makipag-ugnayan sa amin|Makipag-ugnayan]] • [[Wikipedia:Embahada|Embahada]] • ''[[Wikipedia:Guestbook and Help for Non-Kapampangan Speakers|For non-Kapampangan Speakers]]''
 
 <!-------------------------Ing mepiling larawan ngening aldong iti------------------------------->
 {| style="border-spacing:8px; margin:-8px -8px;"
