*Empty MediaWiki Message*

--- a/Pasifiko_Kadayatmalatan.mw
+++ b/Pasifiko_Kadayatmalatan.mw
@@ -1,6 +1,6 @@
 [[File:Pacificocean.PNG|right|Pacific Ocean]]
 {{redirect|Pacific}}
-Ing '''Pacific Kadayatmalatan'''  o Pacific Ocean keng English, (ibat keng [[Latin]] a aus  ''Mare Pacificum'', "tajimic a dayat malat", pepalagyu neng ning  [[Portugal|Portuguese]] a talpaglakbe y [[Ferdinand Magellan]]) iyang peka maragul diling [[danuman]]. 
+Ing '''Pasipiku Kadayatmalatan'''  ('''Kadayatmalatang Pasipiku''') o Pacific Ocean keng English, (ibat keng [[Latin]] a aus  ''Mare Pacificum'', "tajimic a dayat malat", pepalagyu neng ning  [[Portugal|Portuguese]] a talpaglakbe y [[Ferdinand Magellan]]) iyang peka maragul diling [[danuman]]. 
 Makayatsat ya manibat keng [[Arctic]] king pangulu anggang [[Antarctica]] king mauli, makasepu king [[Asia]] ampong [[Australia (continent)|Australia]] king albugan ampong ing [[America]] king aslagan.  Atin yang 169.2 yutang [[kilomettu kudradu]] (65.3 million&nbsp;square miles) keng lualas, iti ing pekamaragul a pangadake ning  [[Pangkabilugan Yatung Ocean]] – ampong, inya iti sasakupan ne ing mga 46% ning danuman ning yatu.<ref name=ebc>"[http://concise.britannica.com/ebc/article-9374340/Pacific-Ocean Pacific Ocean]".  ''[[Encyclopædia Britannica|Britannica Concise]].'' 2006. Chicago: Encyclopædia Britannica, Inc.</ref> <ref>{{cite web|url=http://web-japan.org/atlas/technology/tec03.html|title=Japan Atlas: Japan Marine Science and Technology Center|accessdate=2007-07-04}}</ref>
 
 [[File:vina_del_mar_beach.jpg|thumbnail|300px|right|Pampang karinan ning [[Viña del Mar, Chile]]]]
