Replacing Lion_waiting_in_Nambia.jpg with [[File:Lion_waiting_in_Namibia.jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: typo, error in file name).

--- a/Leon_(animal).mw
+++ b/Leon_(animal).mw
@@ -8,7 +8,7 @@
 | status_system=iucn3.1
 | trend=down
 | status_ref =<ref name="iucn">{{IUCN2008|assessors=Bauer, H., Nowell, K. & Packer, C.|year=2008|id=15951|title=Panthera leo|downloaded=9 October 2008}}</ref>
-| image=Lion waiting in Nambia.jpg
+| image=Lion waiting in Namibia.jpg
 | image_width=250px
 | image_caption=Lalaki
 | image2=Okonjima Lioness.jpg
