Removing "Pope_St._Pius_X.jpg", it has been deleted from Commons by [[commons:User:Hedwig in Washington|Hedwig in Washington]] because: Copyright violation; see [[:c:COM:Licensing|Commons:Licensing]] not own work, no sources -  Using [[:c:COM:VFC|VisualFi

--- a/Pápa_Píu_X.mw
+++ b/Pápa_Píu_X.mw
@@ -1,6 +1,6 @@
 {{Infobox pope|
 Kapampangan name=Piu X|
-image=[[File:Pope_St._Pius_X.jpg|250px]]|
+image=|
 birth_name=Giuseppe Melchiorre Sarto|
 term_start=[[Agostu 4]], [[1903]]|
 term_end=[[Agostu 20]], [[1914]]|
