--- a/Kauswagan.mw
+++ b/Kauswagan.mw
@@ -1,25 +1,6 @@
-[[Image:Ph_locator_lanao del norte_kauswagan.png|right|Map of Lanao del Norte showing the location of Kauswagan]]
+panglang kauswagan lanao del norte molamba pa ang kawait
 
-{{Philippine Census			
-| title = Sensus ning Populasyun <br> Kauswagan, Lanao del Norte
-| 1990 = 27492		
-| 1995 = 18349		
-| 2000 = 15364		
-| 2007 = 23087		
-| 2010 = 24006		
-| 2015 = 		
-| 2020 = 		
-| 2025 = 		
-| 2030 = 		
-|}}
-
-Ing '''Kauswagan''' pang5 yang  [[Ding Balen ning Filipinas|balen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Lanao del Sur|Lanao del Sur]], [[Filipinas]].  Agpang keng [[2000]] sensus, atin yang populasyun a 15,364 a katau kareng 3,095 a pamimalemale.
-
-
-
-==Deng Barangays==
-
-Ing Kauswagan atin yang 13ng [[barangay]].
+oriental sa tanang nagamatay ginoo mala io ka barangay baho tictic surry  
 
 * Bagumbayan (Pob.)
 * Bara-ason
