*Empty MediaWiki Message*

--- a/Turkiya.mw
+++ b/Turkiya.mw
@@ -85,6 +85,7 @@ File:Diyarbakir P1050751 20080427135832.JPG|
 * [http://www.mapturkey.org Map of Turkey]
 * [http://www.kultur.gov.tr Official Tourism Ministry]
 * [http://www.terra-anatolia.com/turkey/turkey.htm Photos of Turkey]
+* [http://miryabluecruise.com Blue Cruise Turkey]
 
 {{NATO}}
 {{EU countries and candidates}}
