--- a/Micronesia.mw
+++ b/Micronesia.mw
@@ -5,6 +5,10 @@
 Die Inselgruppe Mikronesien wurde 2008 mit Gewalt durch Großzar Nick Kellermann II eingenommen. US- Amerikanische Truppen versuchten 2008 die Inseln von der tyrannischen Herrschaft vom Großzaren zu befreien. Jegliche Versuche scheiterten jedoch, da Nick Kellermann II über zu starke Truppenkapazität verfügt und er praktisch unverwundbar ist. Ehret den Großzaren.
 Er beherbergt viele Zwangsarbeiter.
 
+Der große Krieg
+
+Großzar Nick Kellermann II und Jens der Eroberer führten einen erbitterten Krieg im Jahr 2009.Jens zerstörte ganz alleine über 10.000 Männer der Armee von Kellermann des II.Doch nach einen 3 Tage andauernden Kampf zwischen Großzar Nick Kellermann und Jens dem Eroberer, gab Jens auf und schlossen sich mit ihm und  Kaiser Ken zusammen. Bis heute gemeinsam gegen das US-Militär.
+
 == Kasusug Kilwal ==
 * [http://www.mapsouthpacific.com/micronesia/index.html Map of Micronesia]
 * [http://www.southpacific.org/micro.html Moon Handbooks Micronesia]
