--- a/Micronesia.mw
+++ b/Micronesia.mw
@@ -7,7 +7,7 @@ Er beherbergt viele Zwangsarbeiter.
 
 Der große Krieg
 
-Großzar Nick Kellermann II und Jens der Eroberer führten einen erbitterten Krieg im Jahr 2009.Jens zerstörte ganz alleine über 10.000 Männer der Armee von Kellermann des II.Doch nach einen 3 Tage andauernden Kampf zwischen Großzar Nick Kellermann und Jens dem Eroberer, gab Jens auf und schlossen sich mit ihm und  Kaiser Ken zusammen. Bis heute kämpfen sie gemeinsam gegen das US-Militär.
+Großzar Nick Kellermann II und Jens der Eroberer führten einen erbitterten Krieg im Jahr 2009.Jens zerstörte ganz alleine über 10.000 Männer der Armee von Kellermann des II.Doch nach einen 3 Tage andauernden Kampf zwischen Großzar Nick Kellermann und Jens dem Eroberer, gab Jens auf und schloss sich mit ihm und  Kaiser Ken zusammen. Bis heute kämpfen sie gemeinsam gegen das US-Militär.
 
 Die gemeinsame Herrschaft 
 
