*Empty MediaWiki Message*

--- a/El_Ballestero.mw
+++ b/El_Ballestero.mw
@@ -1,3 +1,4 @@
+{{stub}}
 '''El Ballestero''' metung yang [[balen]] king [[Albacete (lalawigan)|Albacete]], [[Castile-La Mancha]], [[Espanya]]. 
 {{coor title dm|38|51|N|2|27|W|region:ES_type:city_source:GNS-enwiki}}
 {{Municipalities in Albacete}}
