*Empty MediaWiki Message*

--- a/Kapampangan_(amanu).mw
+++ b/Kapampangan_(amanu).mw
@@ -180,3 +180,5 @@ DING ANDAM a amanu caring aliuang langguahe, antimo ing Fiesta,versiculos, capit
 
 [[Category:Austronesian a Amanu]]
 [[Category:Amanu ning Filipinas]]
+[[Category:Deng amanung Awstronesyu]]
+[[Category:Deng amanu king Pilipinas]]
