*Empty MediaWiki Message*

--- a/Ilokanu_(amanu).mw
+++ b/Ilokanu_(amanu).mw
@@ -82,4 +82,5 @@ Darakal la murin deng Ilucanu king [[w:Middle East|Libutad a Aslagan]], [[Hong K
 
 [[Category:Ilokanu amanu]]
 [[Category:Amanu ning Filipinas|Ilokanu (amanu)]]
+[[Category:Deng amanung Awstronesyu]]
 [[Category:Deng amanu king Pilipinas]]
