*Empty MediaWiki Message*

--- a/Amanung_Favorlang.mw
+++ b/Amanung_Favorlang.mw
@@ -1,5 +1,20 @@
 Ing '''Amanung Favorlang''' metung ya kareng pamyalita king [[Taiwan]].
 
+{{quotation|
+;Ing Pangadi na ning Ginu (Ibpa Mi)<ref>{{cite book |editor-last=Campbell |editor-first=William |editorlink=William Campbell (missionary) |date=1896 |url=http://www.archive.org/details/cu31924026424675 |title=The articles of Christian instruction in Favorlang-Formosan, Dutch and English, from Vertrecht's manuscript of 1650 |publisher=Kegan Paul, Trench, Trübner & Co. Ltd |place=London |ol=24180153M |oclc=63842595}}</ref>
+
+Namoa tamau tamasea paḡa de boesum, <br>
+Ipádassa joa naan.<br>
+Ipáṣaija joa chachimit o ai.<br>
+Ipa-i-jorr'o oa airab maibas de boesum, masini de ta channumma.<br>
+Epé-e namo-no pia-dai torro uppo ma-atsikap.<br>
+Ṣo-o abó-e namo tataap o kakossi namoa, <br>
+maibas channumma namo mabo tamasea parapies i namo.<br>
+Hai pásabas i namo, ṣo-o barra'i namo innai rapies ai.<br>
+Inau joa micho chachimit o ai, ṣo-o barr'o ai, ṣo-o adas ai, taulaulan,<br>
+Amen.
+}}
+
 {{Suli}}
 
 [[Category:Deng amanung Awstronesyu]]
