*Empty MediaWiki Message*

--- a/Amanung_Favorlang.mw
+++ b/Amanung_Favorlang.mw
@@ -15,6 +15,9 @@ Inau joa micho chachimit o ai, ṣo-o barr'o ai, ṣo-o adas ai, taulaulan,<br>
 Amen.
 }}
 
+==Dalerayan==
+{{reflist}}
+
 {{Suli}}
 
 [[Category:Deng amanung Awstronesyu]]
