mibalik king sadyang bersyun

--- a/Micronesia.mw
+++ b/Micronesia.mw
@@ -1,17 +1,8 @@
-{{dablink|This article is about the greater region. For the independent state, see [[Federated States of Micronesia]].}}
+:''Ing arikulung ini tungkul ya king kalabuwaran. Para king magsariling estadu, lawen ye ing [[Federated States of Micronesia]].''
 
 [[File:Micronesia-large.png|thumb|right|350px|Karinan ning Micronesia.]]
+Ing '''Micronesia''', ibat keng [[ancient Greek]] ''μικρος'' (malati) at ''νησος'' (pulu), iya ing bansag keng labuad king [[Pacific Ocean]]. Ing [[Filipinas]] atiu king albugan, [[Indonesia]] king mauling albugan, [[Papua New Guinea]] at [[Melanesia]] king mauli, at [[Polynesia]] king mauling-aslagan at aslagan. 
 
-Die Inselgruppe Mikronesien wurde 2008 mit Gewalt durch Großzar Nick Kellermann II eingenommen. US- Amerikanische Truppen versuchten 2008 die Inseln von der tyrannischen Herrschaft vom Großzaren zu befreien. Jegliche Versuche scheiterten jedoch, da Nick Kellermann II über zu starke Truppenkapazität verfügt und er praktisch unverwundbar ist. Ehret den Großzaren.
-Er beherbergt viele Zwangsarbeiter.
-
-Der große Krieg
-
-Großzar Nick Kellermann II und Jens der Eroberer führten einen erbitterten Krieg im Jahr 2009.Jens zerstörte ganz alleine über 10.000 Männer der Armee von Kellermann des II.Doch nach einen 3 Tage andauernden Kampf zwischen Großzar Nick Kellermann und Jens dem Eroberer, gab Jens auf und schloss sich mit ihm und  Kaiser Ken zusammen. Bis heute kämpfen sie gemeinsam gegen das US-Militär.
-
-Die gemeinsame Herrschaft 
-
-Kurz nach dem Krieg schlossen sie ein Bündnis.
 
 == Kasusug Kilwal ==
 * [http://www.mapsouthpacific.com/micronesia/index.html Map of Micronesia]
