--- a/Amanung_Tagalug.mw
+++ b/Amanung_Tagalug.mw
@@ -1,6 +1,14 @@
 [[File:Katagalugan.png|thumb|Katagalugan: Deng lugal a magsalita ning Tagalog]]
 Ing '''Amanung Tagalug''' (''Wikang Tagalog'') metung ya kareng pamyalita king [[Pilipinas]].
 
+==Suglung Palwal==
+{{InterWiki|code=tl|Tagalog}}
+{{Wikibooks|Tagalog}}
+{{Wikivoyage|Filipino phrasebook}}
+{{Commons category|Tagalog language|Amanung Tagalug}}
+* [http://tagalog.pinoydictionary.com/ Tagalog Dictionary]
+* [http://www.seasite.niu.edu/tagalog/tagalog_verbs.htm Tagalog verbs with conjugation]
+
 {{Suli}}
 
 [[Category:Deng amanung Awstronesyu]]
