*Empty MediaWiki Message*

--- a/Tangan-tangan.mw
+++ b/Tangan-tangan.mw
@@ -18,7 +18,7 @@
 |binomial_authority = L.
 }}
 [[File:Ricinus communis DSC 0022.JPG|thumb|''Ricinus communis'']]
-Ing  '''tangan-tangan''' (''Ricinus communis''), a '''castor oil plant''' king Ingles, metung yang species ning [[tanaman a manyampaga]]  king [[familia]]ng [[Euphorbiaceae]]. Ya kabud a species king  [[genus]], '''''Ricinus''''', and [[subtribe]], '''Ricininae'''. The evolution of castor and its relation to other species are currently being studied using modern genetic tools.<ref>{{cite web |url=http://www.igs.umaryland.edu/?q=content/euphorbiaceae-spurge-genomics |title=Euphorbiaceae (spurge) genomics |work=Institute for Genome Sciences |publisher=[[University of Maryland, Baltimore|University of Maryland Medical School]] |accessdate=2009-03-09}}</ref>  It reproduces with a mixed pollination system which favor selfing by [[geitonogamy]] but at the same time can be an out-crosser by [[anemophily]] or [[entomophily]].<ref name="ReferenceA"/>
+Ing  '''tangan-tangan''' (''Ricinus communis''), a '''castor oil plant''' king Ingles, metung yang species ning [[tanaman a manyampaga]]  king [[familia]]ng [[Euphorbiaceae]]. Ya kabud a species king  [[genus]], '''''Ricinus''''', ampo king [[subtribe]] '''Ricininae'''. The evolution of castor and its relation to other species are currently being studied using modern genetic tools.<ref>{{cite web |url=http://www.igs.umaryland.edu/?q=content/euphorbiaceae-spurge-genomics |title=Euphorbiaceae (spurge) genomics |work=Institute for Genome Sciences |publisher=[[University of Maryland, Baltimore|University of Maryland Medical School]] |accessdate=2009-03-09}}</ref>  It reproduces with a mixed pollination system which favor selfing by [[geitonogamy]] but at the same time can be an out-crosser by [[anemophily]] or [[entomophily]].<ref name="ReferenceA"/>
 
 Katutubu ya ing tangan-tangan king [[mauli]]-[[aslagan]]g  [[Mediterranean Basin]], [[Aslagan]]g  [[Africa]], ampong [[India]], oneng maleparan ing lugal nung nu ya mayayakit kareng labuad a malisangan o tropical, at tatanam de kareng aliwang lugal antimong tanaman a ornamental.<ref name="Phillips" />
 
