*Empty MediaWiki Message*

--- a/Tangan-tangan.mw
+++ b/Tangan-tangan.mw
@@ -1,7 +1,7 @@
 {{taxobox
 |name = ''Ricinus communis''
 |image = Ricinus March 2010-1.jpg
-|image_caption = Leaves and flowers (male flowers on top) of a Castor oil plant
+|image_caption = Deng bulung ampong sampaga (ken lang babo deng lalaking sampaga) ning tanaman a tangan-tangan
 |regnum = [[Plant]]ae
 |unranked_divisio = [[Angiosperms]]
 |unranked_classis = [[Eudicots]]
