Replacing Drawing-1.png with [[File:Coleoptera_collage.png]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #2]]: Änderung komplett bedeutungsloser oder zw

--- a/Coleoptera.mw
+++ b/Coleoptera.mw
@@ -1,6 +1,6 @@
 {{Taxobox
 |fossil_range={{fossilrange|318|0}} [[Pennsylvanian]] – Recent
-|image=Drawing-1.png
+|image=Coleoptera collage.png
 |image_width=300px
 |image_caption=Top left to bottom right: female golden stag beetle (''[[Lamprima aurata]]''), [[rhinoceros beetle]] (''Megasoma'' sp.), a species of ''[[Amblytelus]]'', cowboy beetle (''[[Chondropyga dorsalis]]''), and a long nose weevil (''[[Rhinotia hemistictus]]'').
 |regnum=[[Animal]]ia
