*Empty MediaWiki Message*

--- a/Suho.mw
+++ b/Suho.mw
@@ -1,4 +1,5 @@
-I '''Kim Joo-myun''' ([[Hangul]]: 김준면, [[Hanja]]: 金俊勉, mibait Mayu 22, 1991 king [[Seoul]], [[Mauling Korea]]), mas mekilala yang '''Suho''' ([[Hangul]]: 수호), metung yang talakanta at artista king [[Mauling Korea]]. Metung yang miyembru ning bandang [[EXO]].
+[[File:Kim Joon Myun at the Hallyu Star Street on March 2014 01.jpg|right|200px]]
+I '''Kim Joon-myun''' ([[Hangul]]: 김준면, [[Hanja]]: 金俊勉, mibait Mayu 22, 1991 king [[Seoul]], [[Mauling Korea]]), mas mekilala yang '''Suho''' ([[Hangul]]: 수호), metung yang talakanta at artista king [[Mauling Korea]]. Metung yang miyembru ning bandang [[EXO]].
 
 {{stub}}
 
