Replacing Vincent_Willem_van_Gogh_015.jpg with [[File:Vincent_Willem_van_Gogh_-_Cafe_Terrace_at_Night_(Yorck).jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: To change from a meaningless or ambiguous n

--- a/Arles.mw
+++ b/Arles.mw
@@ -40,7 +40,7 @@ Ing '''Arles''' ([[Provençal]] [[Occitan]]: ''' ''Arles'' ''' metung yang [[lak
 === Makabayung Arles ===
 [[File:Arles-PlaceDuForum.jpg|thumb|left|250px|Ing karinan ning Du Forum king Arles ngeni.]]
 
-[[File:Vincent Willem van Gogh 015.jpg|thumb|right|250px|''[[Cafe Terrace neng Bengi]]'' neng [[Vincent Van Gogh]] (Septiembri 1888). ]]
+[[File:Vincent Willem van Gogh - Cafe Terrace at Night (Yorck).jpg|thumb|right|250px|''[[Cafe Terrace neng Bengi]]'' neng [[Vincent Van Gogh]] (Septiembri 1888). ]]
 [[File:sttrophimeportal.png|right|thumb|250px|Portal na ning Santung Trophimus cathedral.]]
 [[File:Alyscamps van gogh.jpg|right|250px|thumb|''[[Les Alyscamps, Falling Autumn Leaves]]'', [[Vincent van Gogh]], 1888.]]
 [[File:Arlesmarketgarlicstand.jpg|thumb|right|250px|Ing magtindang bawang keng dalan palengki.]]
