*Empty MediaWiki Message*

--- a/Lanciego%2FLantziego.mw
+++ b/Lanciego%2FLantziego.mw
@@ -1,3 +1,4 @@
+[[File:Lanciego en otoño.jpg|270px|thumbnail|left]]
 Ing '''Lanciego''' ({{lang-eu|Lantziego}}) metung yang balen king lalawigan ning [[Álava]], king [[Basque Country (autonomous communidad)|Basque Bangsa]], pangulung [[Espania]].. 
 
 
