Removing "Hokchew.JPG", it has been deleted from Commons by [[commons:User:Ellin Beltz|Ellin Beltz]] because: Per [[:c:Commons:Deletion requests/File:Hokchew.JPG|]].

--- a/Fuzhou.mw
+++ b/Fuzhou.mw
@@ -4,7 +4,7 @@
 |official_name = {{longitem|style=font-size:110%;|{{nobold|{{lang|zh-cn|福州市}}}}}}
 |native_name = {{lower|0.1em|{{nobold|{{lang|zh-hans|福州}}}}}}
 |settlement_type = [[Prefecture-level city]]
-|image_skyline = Hokchew.JPG
+|image_skyline =
 |image_caption = from top, left to right: Black Pagoda of Fuzhou, White Pagoda of Fuzhou; the traditional Fuzhou-style gate of a mansion, fireproof wall and façade decoration in the Three Lanes and Seven Alleys in Fuzhou; City skyline of Fuzhou
 |image_map = ChinaFujianFuzhou.png
 |map_caption = Location of Fuzhou City jurisdiction in Fujian
