*Empty MediaWiki Message*

--- a/Barbie_Hsu.mw
+++ b/Barbie_Hsu.mw
@@ -1,4 +1,4 @@
-I '''Barbie Hsu''' ([[Amanung Tsinu]]: 徐熙媛, [[Pinyin]]: Xú Xīyuán, mibait Oktubri 6, 1976 king [[Taipei]], [[Taiwan]]) metung yang artista ampong talakanta king [[Taiwan]].
+I '''Barbie Hsu''' ([[Amanung Tsinu|Tsinu]]: 徐熙媛, [[Pinyin]]: Xú Xīyuán, mibait Oktubri 6, 1976 king [[Taipei]], [[Taiwan]]) metung yang artista ampong talakanta king [[Taiwan]].
 
 ==Suglung Palwal==
 * [http://twitter.com/itsbarbiexu Barbie Hsu] king [[Twitter]]
