*Empty MediaWiki Message*

--- a/Manitoba.mw
+++ b/Manitoba.mw
@@ -4,8 +4,8 @@
 | AlternateName       = 
 | Fullname            = Lalawigan ning Manitoba
 | EntityAdjective     = Provincial
-| Flag                = Flag of Manitoba.svg
-| CoatOfArms          = Blason_province_ca_Manitoba_(NormeFr).svg
+| Flag                = Flag of the Province of Manitoba.svg
+| CoatOfArms          = Coat of arms of Manitoba.svg
 | Map                 = Manitoba, Canada.svg
 | Motto               = Gloriosus et Liber ([[Latin]]: Glorious and free)
 | OfficialLang        = [[English language|English]] at [[French language|French]], per mandate of the [[Constitution Act 1982]]
