([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Texas.JPG]] → [[File:Welcome to Texas sign, 2008.jpg]] [[c:COM:FR#reasons|File renaming criterion #2]]: To change from a meaningless or ambiguous name to a name that describes what the image displays.

--- a/Texas.mw
+++ b/Texas.mw
@@ -44,7 +44,7 @@ Ing '''Texas''' ({{Audio-IPA|en-us-Texas.ogg|/ˈtɛksəs/}}) metung yang [[U.S. 
 
 [[File:Wpdms republic of texas.svg|thumb|right|Ing Republica ning Texas. Ing kasalungsungan a sepung-gulis an ning U.S. states megulis la reng sepu ingyang1836–1845]]
 
-[[File:Texas.JPG|thumb|right|Ing paskil king Texas state a Malaus ka]]
+[[File:Welcome to Texas sign, 2008.jpg|thumb|right|Ing paskil king Texas state a Malaus ka]]
 
 [[File:Glory to the defeated - dignified resignation.jpg|left|upright|thumb|Aklasan-balen monumentu king  [[Galveston, Texas]]]]
 
