*Empty MediaWiki Message*

--- a/Banglades.mw
+++ b/Banglades.mw
@@ -54,6 +54,58 @@
 
 Ding makatagan nang [[civilization]] ning keragulang labuad Bengal makapetsa mga apat a libung banua na,<ref name="bharadwaj">{{cite book |last=Bharadwaj |first=G |editor=Majumdar, RC |year=2003 |chapter=The Ancient Period |title=History of Bengal |publisher=B.R. Publishing Corp}}</ref><ref name="xinhua">{{cite news |publisher=Xinhua |date=2006-March |title=4000-year old settlement unearthed in Bangladesh |url=http://news.xinhuanet.com/english/2006-03/12/content_4293312.htm}}</ref> inyang ing labuad tutuknagnan de pa ring [[Dravidian tau|Dravidian]], [[Tibeto-Burman languages|Tibeto-Burman]], and [[Austro-Asiatic languages|Austro-Asiatic]] a tau. Ing taganang penibatan ning katayang "Bangla" o "Bengal"  alang mikibalu, agiang panwalan dang ibat ya keng ''Bang'', ing Dravidian-mangamanung katutubu a nung nu ila ring migdatun king karinan inyang mga 1000&nbsp;BCE.<ref name="congress">{{cite book |publisher=Library of Congress |url=http://memory.loc.gov/frd/cs/bdtoc.html |chapter=Early History, 1000 B.C.-A.D. 1202 |title=Bangladesh: A country study |editor=James Heitzman and Robert L. Worden |year=1989}}</ref>
 
+{| class="infobox borderless"
+|+ National symbols of Bangla-Desh (Official)
+|-
+! '''State animal'''
+| 
+| [[Image:Panthera tigris.jpg|50px]]
+|-
+! '''State bird'''
+| 
+| [[Image:Oriental Magpie Robin (Copsychus saularis)- Male calling in the rain at Kolkata I IMG 3746.jpg|50px]]
+|-
+! '''State tree'''
+| 
+| [[Image:Mango blossoms.jpg|50px]]
+|-
+! '''State flower'''
+| 
+| [[Image:Nymphaea pubescens (9149867657).jpg|50px]]
+|-
+! '''State aquatic marine mammal'''
+| 
+| [[Image:PlatanistaHardwicke.jpg|50px]]
+|-
+! '''State reptile'''
+| 
+| [[Image:Gavial-du-gange.jpg|50px]]
+|-
+! '''State fruit'''
+| 
+| [[Image:(Artocarpus heterophyllus) Jack fruits on Simhachalam Hills 01.jpg|50px]]
+|-
+! '''State fish'''
+|
+| [[Image:Ilish.JPG|50px]]
+|-
+! '''State mosque'''
+|
+| [[Image:Baitul Mukarram (Arabic, بيت المكرّم; Bengali, বায়তুল মুকাররম; The Holy House).jpg|50px]]
+|-
+! '''State temple'''
+| 
+| [[Image:Hindu Temple in Dhaka.jpg|50px]]
+|-
+! '''State river'''
+| 
+| [[Image:Boat on Jamuna River.jpg|50px]]
+|-
+! '''State mountain'''
+| 
+| [[Image:Keokradong.jpg|50px]]
+|-
+|}
 
 {{Asia}}
 {{Bangsang geo-stub}}
