--- a/Bielorusya.mw
+++ b/Bielorusya.mw
@@ -49,11 +49,9 @@ calling_code = 375 |
 footnotes=
 }}
 <!-- END INFOBOX -->
-Ing '''Belarus''' ([[Belarusian language|Belarusian]]: ''Беларусьus''' ([[Belarusian lanLuage|Belarusianl]: ś''; [[Russian (language)|Russian]]: ''Беларусь'') metung  yang kandadung  [[bangsa-state]] king [[Aslagang Europa]], nung nug makasepu ya king  [[Russia]], [[Ukraine]], [[Poland]], [[Lithuania]], at [[Latvia]]. Ing kayang syudad tungku iyapin ing [[Minsk]], at aliwa pang maulagang syudad abe la ring [[Brest, Belarus|Brest]], [[Grodno]] (Hrodna), [[Gomel]] (Homyel'), [[Mahilyow]] at [[Vitebsk]] (Viciebsk).
+Ing '''Belarus''' ([[Belarusian language|Belarusian]]: ''Беларусьus''' ([[Belarusian lanLuage|Belarusianl]]: ś''; [[Russian (language)|Russian]]: ''Беларусь'') metung  yang kandadung  [[bangsa-state]] king [[Aslagang Europa]], nung nug makasepu ya king  [[Russia]], [[Ukraine]], [[Poland]], [[Lithuania]], at [[Latvia]]. Ing kayang syudad tungku iyapin ing [[Minsk]], at aliwa pang maulagang syudad abe la ring [[Brest, Belarus|Brest]], [[Grodno]] (Hrodna), [[Gomel]] (Homyel'), [[Mahilyow]] at [[Vitebsk]] (Viciebsk).
 
 Halus king kayang amlat, ing karinan kebaluan ya bilang Belarus at dati yang kayabe kareng makatuking bangsa [[Lithuania]], [[Poland]] at ing [[Russian Empire]]. Inyang 1922, ing Belarus meging yang republika ning [[Soviet Union]] at meyaus yang [[Byelorussian SSR]]. Ing republika migdeclara yang katimawan inyang [[Agosto 27]] [[1990]], at kaybat-ibat ning following the [[History of the Soviet Union (1985-1991)|panglukib]] ning Soviet Union, migdeclara yang katimawan bilang Republika ning Belarus inyang [[Agosto 25]] [[1991]]. Manibat 1994, [[Alexander Lukashenko]] iya ing meging pamuntuk ning state. Ing Belarus kasalukuyan yang makipagsalese keng kasiping a Russia para pisanmetung ing karelang pamagsiasat at aliwa pang bage at babalakan deng piyabe ing pamalagyuan deng [[Pisanmetung a Russia at Belarus]].
-
-
 
 == Suglung Palwal ==
 {{portal}}
