*Empty MediaWiki Message*

--- a/Rusia.mw
+++ b/Rusia.mw
@@ -48,47 +48,20 @@
 |footnotes                =
 }}
 Ing '''Russia''' ({{lang-ru|Росси́я}}, ''Rossiya''; [[International Phonetic Alphabet|mayayagkas]] {{IPA|[rʌ'sʲi.jə]}}), makanyan mu rin<ref>From Article&nbsp;1 of [[Constitution of Russia]]: "The names "Russian Federation" and "Russia" shall be equivalent."</ref> ing '''Russian Federation''' (Росси́йская Федера́ция, ''Rossiyskaya Federatsiya''; {{IPA|[rʌ'sʲi.skə.jə fʲɪ.dʲɪ'ra.ʦɪ.jə]}},(Russian language) {{Audio|Ru-Rossiyskaya Federatsiya Rossiya.ogg|listen}}), metung yang transcontinental a [[bangsa]] a makayatsat keng malapad a gabun ning [[Asia]] at [[Europa]]. Atin yang dagul a 17,075,400 [[km²]], ing Russia iya ing [[List of countries and outlying territories by total area|pekamaragul diling bangsa keti yatu]],<ref>Statistical Handbook on Poverty in the Developing World - Page 1 by Chandrika Kaul - 1999</ref> a atin sakup a alus dobli ing territoryu ning metung a kaduang pekamaragul a bangsa, ing [[Canada]], at dakal ya mineral at energy pikuanan. Ing Russia iya ing [[List of countries by population|pang-walung pekamarakal a populasyun]] keti yatu. Ing Russia makasepu ya kareng tutuking bangsa (padurut pabaligtad a relo manibat king pangulungalbugan papuntang maulingaslagan): [[Norway]], [[Finland]], [[Estonia]], [[Latvia]], [[Lithuania]], [[Poland]], [[Belarus]], [[Ukraine]], [[Georgia (bangsa)|Georgia]], [[Azerbaijan]], [[Kazakhstan]], [[People's Republic of China|China]], [[Mongolia]], at [[North Korea]]. Malapit ya naman keng [[United States]], [[Sweden]], at [[Japan]] karing lipat a mangalapit mung dayat malat antimo ring (ing [[Bering Strait]], ing [[Baltic Dayat Malat]], at [[La Pérouse Strait]], pamitukituki).
-
-
-
 [[File:Central highlands.jpg|thumbnail|left|[[Kalibudtarang GabunBabo ning Russia]], [[Zaraysk]]]]
-
- [[File:Sochi.jpg|thumbnail|left|[[Sochi]], [[Krasnodar Krai]]]]
-
-
+[[File:Sochi.jpg|thumbnail|left|[[Sochi]], [[Krasnodar Krai]]]]
 [[File:Magadan.jpg|thumbnail|right|[[Magadan Oblast|Magadan]], [[Russian Far East]]]]
-
-[[File:IE expansion.png|thumbnail|[[Kurgan hypothesis]]: 
-
+[[File:IE expansion.png|thumbnail|[[Kurgan hypothesis]]]]
 [[File:Kievan Rus en.jpg|thumbnail|right|[[Kievan Rus']] inyang pang11 a dilanua]]
-
-
 [[File:Lissner TroiceSergievaLavr.jpg|left|thumbnail|Ing mayayakit inyang medieval Russian a amlat]]
-
 [[File:Peter der-Grosse 1838.jpg|upright|thumbnail|left|[[Peter I of Russia|Pedrung Lakan ning Russia]]
-
 [[File:Napoleons retreat from moscow.jpg|thumbnail|right|Ing pamanatras nang Napoleon ibat Moscow]]
 [[File:Imperio Ruso.PNG|thumbnail|right|Ing [[Emperiu ning Russian]] inyang 1866 ampong ding kayang ayayasag a lugal]]
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 == Federal subjects ==
 {{Main|Federal subjects na ning Russia}}
 [[File:Russian-regions.png|thumbnail|left|300px|Federal subjects of Russia]]
-
 Ing Russia metung yang [[federasyun]] nung nu, agpang inyang [[Marsu 1]], [[2008]], atin yang 83&nbsp;'''subjects'''.<ref name="Constitution">[http://base.consultant.ru/cons/cgi/online.cgi?req=doc;base=LAW;n=2875;fld=134;dst=100236;div=LAW Конституция Российской Федерации, Статья&nbsp;65] ([[Constitution ning Russia]], Article&nbsp;65) {{ru icon}}</ref> Dening subjects pantepante la kareng karelang karapatan ampong kareng karelang pareu bilang a pamikakatawanan—aduang delgadu balang— keng [[Federation Council of Russia|Federation Council]] ([[upper house]] na ning Russian parliamentaryu). Dapot, atin lang pamialiwa keng karelang panga[[autonomous area|autonomy]] a tatamasa ra. Deng autonomous okrugs, kabang mong federal subjects king karelang pangasarili, makanyan mu rin makikilala la bilang administratibung pangadake da reng aliwang federal subjects (nung nu ing [[Chukotka Autonomous Okrug]] iya kabud makaaliwa). Deng federal subjects mabibilang la bilang kaduang antas da reng federal a pangadake, iti makalalam la kareng federal a batas (mumunang antas).
-<br clear="all" />
 
 ==Dalerayan==
 {{Reflist}}
@@ -103,8 +76,6 @@ Ing Russia metung yang [[federasyun]] nung nu, agpang inyang [[Marsu 1]], [[2008
 * [http://web.archive.org/web/20030908005515/http://www.kremlin.ru/eng/ Kremlin] - Official presidential site
 * {{ru icon}} [http://www.gov.ru/ Gov.ru] - Official governmental portal
 * {{ru icon}} [http://www.russia-today.ru/ Russian Federation Today]. Official issue of the Federal Assembly.
-
-
 
 {{Maulingalbugang Asia}}
 {{Russiantie}} mike rock emma don't
