*Empty MediaWiki Message*

--- a/Kvemo_Kartli.mw
+++ b/Kvemo_Kartli.mw
@@ -10,7 +10,7 @@ Kvemo Kartlis mkhare
 |-
 | Labuad [[ISO 3166]] code: || GE-KK
 |-
-| Lualas:  || 6,528 km²
+| Lualas:  || 6 527.6<ref>საქართველოს მოსახლეობის 2002 წლის პირველი ეროვნული საყოველთაო აღწერის შედეგები: [https://web.archive.org/web/20151023202029/http://www.geostat.ge/cms/site_images/_files/georgian/census/2002/I%20tomi%20-%20saqarTvelos%20mosaxleobis%202002%20wlis%20pirveli%20erovnuli%20sayovelTao%20aRweris%20Sedegebi.pdf ტომი I]. მთავარი რედაქტორი: თეიმურაზ ბერიძე. თბილისი: საქართველოს სტატისტიკის ეროვნული სამსახური, 2003, გვერდი 53. ISBN 99928-0-768-7</ref> km²
 |-
 | Populasyun: || 508,300 (2007)
 |-
